Fix images not visible on firefox

--- a/src/page/timeline/timeline-element/timeline-element.scss
+++ b/src/page/timeline/timeline-element/timeline-element.scss
@@ -88,7 +88,7 @@
     text-align: center;
     box-shadow: var(--shadow);
     border-radius: var(--border-radius);
-
+    z-index: 1;
     background-color: var(--blurred-card-color);
     transition: background-color var(--transition-time);
 
